--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,11 +107,15 @@ if((CMAKE_COMPILER_IS_GNUCXX AND CMAKE_C_COMPILER_VERSION VERSION_GREATER "4.7.9
 endif()
 
 if(CMAKE_COMPILER_IS_GNUCXX)
-  if ((CMAKE_C_COMPILER_VERSION VERSION_GREATER "4.8.99") OR
-      CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11")
+  if (FORCE_C_STD_FLAGS)
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${FORCE_C_STD_FLAGS}")
   else()
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
+    if ((CMAKE_C_COMPILER_VERSION VERSION_GREATER "4.8.99") OR
+        CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+      set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11")
+    else()
+      set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
+    endif()
   endif()
 endif()
 
